# jupytermeow

./: .gitattributes  .gitignore  .jupytermeowrc  README.md  eslint.config.mjs  install.json  mise.toml  package-lock.json  package.json  pyproject.toml  setup.sh  tsconfig.json
jupytermeow/: __init__.py
schema/: plugin.json
src/core/: aceWindow.ts  attachPolicy.ts  avy.ts  command.ts  edits.ts  engine.ts  grab.ts  hints.ts  keypad.ts  motions.ts  port.ts  rc.ts  rcParser.ts  rcState.ts  registry.ts  search.ts  selections.ts  state.ts  structures.ts  text.ts  things.ts  toolWindowEscape.ts  treeMeow.ts  whichKey.ts  windmove.ts
src/labextension/: index.ts  overlays.ts
src/test/: attach.test.ts  avy.test.ts  editing.test.ts  emacsMotion.test.ts  findSearch.test.ts  grabBeacon.test.ts  helpers.ts  modesKeypad.test.ts  movement.test.ts  rc.test.ts  repeat.test.ts  selection.test.ts  things.test.ts  toolWindowEscape.test.ts  treeMeow.test.ts  windmove.test.ts
